--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-            <img class="profile-avatar" id="avatar" src="https://via.placeholder.com/180x180" alt=".">
+            <img class="profile-avatar" id="avatar" src="" alt=".">
             <h1 class="profile-name" id="name"></h1>
             <h2 class="profile-username" id="username"></h2>
             <ul class="numbers">
@@ -30,33 +30,6 @@
             <a href="#" class="profile-link" id="link">Ver no Github</a>
         </div>
     </header>
-    <script>
-        document.addEventListener('DOMContentLoaded', function()
-        {
-            const nameElement = document.querySelector('#name');
-            const usernameElement = document.querySelector('#username');
-            const avatarElement = document.querySelector('#avatar');
-            const repositoriosElement = document.querySelector('#repositorios');
-            const seguidoresElement = document.querySelector('#seguidores');
-            const seguindoElement = document.querySelector('#seguindo');
-            const linkElement = document.querySelector('#link');
-
-            fetch('https://api.github.com/users/dimasmmdasilva')
-            .then(function(res)
-            {
-                return res.json();
-            })
-            .then(function(json)
-            {
-                nameElement.innerText = json.name;
-                usernameElement.innerText = json.login;
-                avatarElement.src = json.avatar_url;
-                seguidoresElement.innerText = json.followers;
-                seguindoElement.innerText = json.following;
-                repositorios.innerText = json.public_repos;
-                linkElement.href = json.html_url;
-            })
-        })
-    </script>
+    <script src="main.js"></script>
 </body>
 </html>
